# stablefunV2

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
anchor/: Anchor.toml
anchor/programs/basic/: Cargo.toml
anchor/programs/basic/src/: errors.rs  lib.rs  state.rs
anchor/programs/basic/src/instructions/: burn_tokens.rs  mint_tokens.rs  mod.rs  token_create.rs  treasury_setup.rs  treasury_transfer.rs
anchor/tests/: basic.spec.ts
src/app/: layout.tsx
src/app/buysavingscoin/: page.tsx
src/app/stablecoins/[mintAddress]/: page.tsx
src/app/stablesfun/: page.tsx
src/components/basic/: basic-data-access.tsx  basic-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/stablesfun/: constants.tsx  getAllMints.tsx  init_static.tsx
src/components/ui/: lhs-nav.tsx  ticker.tsx  token-card.tsx  ui-layout.tsx
